--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   justify-content: center;
 }
 .body{
-  overflow-y: scroll;
+  overflow-y: auto;
   /* height: 90% !important; */
   display: flex;
   flex-direction: column;
@@ -35,6 +35,7 @@
 }
 
 .footer{
+  border-top: 1px solid lightgray;
   height: 4%;
 }
 
