--- a/src/post.css
+++ b/src/post.css
@@ -9,20 +9,26 @@
   
 .post-img{
     width: 100%;
+    height: 100%;
     object-fit: contain;
     max-width: 600px;
+    max-height: 400px;
     pointer-events: none;
+    background-color: #fafafa;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   
 }
 
 .comment{
     font-size: 12px;
     /* margin: 5px 0; */
+    
 }
 .footer-post{
     max-width: 600px;
 }
 .comments{
+    
     font-size: 13px;
     margin: 5px 0;
 }
